
2023-11-15: Authentication Flow Improvements
- Created a sign-up page at `/sign-up` route with social authentication options
- Added a sign-up form component that uses Clerk for OAuth authentication
- Enhanced login form with a link to the sign-up page for new users
- Improved navigation between sign-in and sign-up pages for better user experience
- Fixed HTML entity escaping for apostrophes in text content 

2023-11-15: Added Authentication Requirement for Room Access
- Implemented authentication protection for audio and video rooms
- Added redirect to sign-in page for unauthenticated users trying to access rooms
- Added informative UI with sign-in buttons when authentication is required
- Protected both regular rooms and video rooms with consistent authentication checks
- Improved user experience with proper loading states during authentication check 

2023-11-16: Added Authentication Button to Homepage Header
- Created a new AuthButton component that displays a Sign In button for unauthenticated users
- Added Clerk's UserButton for authenticated users with a profile menu
- Integrated the auth button into the main header for easy access from any page
- Improved the app's UX by making authentication options clearly visible
- Fixed the app name display to consistently show "NexTalk" instead of "NextTalk" 

2023-11-16: Fixed User Information Display in Private Room Invitations
- Enhanced auth synchronization to properly capture user names and emails from Clerk
- Improved user name extraction with better fallbacks (fullName → firstName+lastName → firstName → username)
- Added more robust email extraction to handle complex Clerk user data structures
- Enhanced user search functionality with fallback to listing all users when search returns no results
- Improved UI display with consistent handling of missing or undefined values
- Fixed issues with user profiles showing "Unnamed User" and "No email available" 